--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
-                    </p>
+                        I am a Master's student mainly interested in the area of Computer Networks and Systems and i strive to improve my skills, gain related work
+experience as well as contribute, especially in the fields of Adaptive bitrate streaming, Wireless Sensor Networks, Networking and Distributed systems.                    </p>
                 </div>
             </div>
         </div>
@@ -88,26 +86,32 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>University of Massachusetts, ECE Department</h3>
+                <h4>Graduate Research Assistant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                    
+		</p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="February 2016 – May 2016">
+                <h3>Zoho Corp, Web-NMS group, IoT subgroup, Chennai, India</h3>
+                <h4>Engineering Intern</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                    • Integrated the Modbus RTU protocol with their Web based Agent
+		    • Retrieved and wrote Modbus data from power meter connected to the server using Modbus RTU (application layer), 
+		      Zigbee and 802.15.4 protocols
+		    • Transferred the retrieved data from the local agent to the user
+		    • Programmed the agent to enable data writing to the power meter holding registers
+		 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2014 – July 2014">
+                <h3>Mayuresh Industries Limited, Kolhapur, India</h3>
+                <h4>Engineering Intern</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    • Underwent onsite training in: Microcontrollers and their applications
+		    • Analog circuits for various applications such as juicer
+		    • Gained theoretical knowledge of the processing skills required in the microcontrollers and analog circuits
                 </p>
             </div>
         </div>
@@ -156,9 +160,13 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3> <a href="https://github.com/RAJSD2610/MobileBankingSecuritySystem"> Secure Payment via Mobile Phones </a> </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            • Created Mobile App using Android Studio for Client.
+			    • Created Certification Authority Server (used X.509v1 certificates), Merchant Server and Bank Server using Eclipse(Java).
+			    • Created Algorithm to secure the transaction process, using Secure Electronic Transaction (SET) Algorithm as a base.
+			    • Implemented OTP during verification and Email for notification.
+			    • Checked the System against Masquerade and Replay attack.
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -222,7 +230,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2017 Rajvardhan S Deshmukh
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -233,7 +241,7 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/RAJSD2610" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
