--- a/index.html
+++ b/index.html
@@ -85,16 +85,18 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="January 2016 – Present">
-                <h3>University of Massachusetts, ECE Department</h3>
+            <div data-date="February 2017 – Present">
+                <h3>University of Massachusetts, ECE Department, Amherst </h3>
                 <h4>Graduate Research Assistant</h4>
                 <p>
-                    
+                   • Compared IP based approach to Information Centric Approach (ICN) to disseminate information in NS3 simulation. (published)
+		   • Compared Adaptive bitrate strategies (SQUAD and BOLA) over application layer protocols (QUIC, HTTP1 and HTTP2) on Cloudlab nodes using Astream player and Caddy server. (ongoing)
+		   • Offloading the LTE base-stations using ICN and comparing various parameters in NS3 simulation. (ongoing)  
 		</p>
             </div>
 
-	    <div data-date="February 2017 – Present">
-                <h3></h3>
+	    <div data-date="February 2017 – May 2016">
+                <h3> Zoho Corp, Web-NMS group, IoT subgroup, Chennai, India </h3>
                 <h4>Engineering Intern</h4>
                 <p>
                     • Integrated the Modbus RTU protocol with their Web based Agent
@@ -104,18 +106,7 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
 		    • Programmed the agent to enable data writing to the power meter holding registers
 		 </p>
             </div>
-
-            <div data-date="February 2016 – May 2016">
-                <h3>University of Massachusetts Amherst</h3>
-                <h4>Graduate Research Assistant, Computer Networks</h4>
-                <p>
-                    • Compared IP based approach to Information Centric Approach (ICN) to disseminate information in NS3 simulation. (published)
-		    • Compared Adaptive bitrate strategies (SQUAD and BOLA) over application layer protocols (QUIC, HTTP1 and HTTP2) on Cloudlab nodes using Astream player and Caddy server. (ongoing)
-		    • Offloading the LTE base-stations using ICN and comparing various parameters in NS3 simulation. (ongoing)
- 
-		 </p>
-            </div>
-
+		
             <div data-date="June 2014 – July 2014">
                 <h3>Mayuresh Industries Limited, Kolhapur, India</h3>
                 <h4>Engineering Intern</h4>
