--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
                 <h3>University of Massachusetts, ECE Department, Amherst </h3>
                 <h4>Graduate Research Assistant</h4>
                 <p>
-                   • Compared IP based approach to Information Centric Approach (ICN) to disseminate information in NS3 simulation. (published)
-		   • Compared Adaptive bitrate strategies (SQUAD and BOLA) over application layer protocols (QUIC, HTTP1 and HTTP2) on Cloudlab nodes using Astream player and Caddy server. (ongoing)
-		   • Offloading the LTE base-stations using ICN and comparing various parameters in NS3 simulation. (ongoing)  
+                   <li> Compared IP based approach to Information Centric Approach (ICN) to disseminate information in NS3 simulation. (published) </li>
+		   <li> Compared Adaptive bitrate strategies (SQUAD and BOLA) over application layer protocols (QUIC, HTTP1 and HTTP2) on Cloudlab nodes using Astream player and Caddy server. (ongoing) </li>
+		   <li> Offloading the LTE base-stations using ICN and comparing various parameters in NS3 simulation. (ongoing) </li> 
 		</p>
             </div>
 
@@ -99,11 +99,11 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
                 <h3> Zoho Corp, Web-NMS group, IoT subgroup, Chennai, India </h3>
                 <h4>Engineering Intern</h4>
                 <p>
-                    • Integrated the Modbus RTU protocol with their Web based Agent
-		    • Retrieved and wrote Modbus data from power meter connected to the server using Modbus RTU (application layer), 
-		      Zigbee and 802.15.4 protocols
-		    • Transferred the retrieved data from the local agent to the user
-		    • Programmed the agent to enable data writing to the power meter holding registers
+                    <li> Integrated the Modbus RTU protocol with their Web based Agent </li>
+		    <li> Retrieved and wrote Modbus data from power meter connected to the server using Modbus RTU (application layer), 
+		      Zigbee and 802.15.4 protocols </li>
+		    <li> Transferred the retrieved data from the local agent to the user </li>
+		    <li> Programmed the agent to enable data writing to the power meter holding registers </li>
 		 </p>
             </div>
 		
@@ -111,9 +111,10 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
                 <h3>Mayuresh Industries Limited, Kolhapur, India</h3>
                 <h4>Engineering Intern</h4>
                 <p>
-                    • Underwent onsite training in: Microcontrollers and their applications
-		    • Analog circuits for various applications such as juicer
-		    • Gained theoretical knowledge of the processing skills required in the microcontrollers and analog circuits
+                    
+                <li> Underwent onsite training in: Microcontrollers and their applications </li>
+		<li> Analog circuits for various applications such as juicer </li>
+		<li> Gained theoretical knowledge of the processing skills required in the microcontrollers and analog circuits </li>
                 </p>
             </div>
         </div>
@@ -135,11 +136,31 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
             <span class="education-date">Fall 2012 - Summer 2016</span>
             <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
             </ul>
         </div>
+        <!-- End .education-block -->
+    </div>
+    <!-- End #education -->
+<div id="education">
+        <h2 class="heading">Publications</h2>
+        <div class="education-block">
+            <h3><a href="http://ieeexplore.ieee.org/document/8115849/"> An information centric networking approach for sensor to vehicular network communication in disasters </a></h3>
+            <p>In this paper, we present an NDN-based architecture for the dissemination of roadside information to cars. 
+	       Our focus is on flooding events which are often caused by severe weather which also impacts the communication 
+	       infrastructure. We compare the performance of different message forwarding strategies in VANETs (Vehicular Adhoc 
+	       Networks) through simulation. In addition, we analyze how our approach compares to an infrastructure-based 
+	       approach that is less resilient in the case of natural disaster. Our simulations show that the strategy that 
+	       considers geographical location and velocity of the vehicle performs better compared to others, which in turn 
+	       outperforms the infrastructure-based approach
+	    </p>
+        </div>
+        <!-- End .education-block -->
+        <div class="education-block">
+            <h3><a href="http://ieeexplore.ieee.org/document/7546061/"> Analysis of DSDV, OLSR and AODV Routing Protocols in VANETS Scenario: Using NS3 </a></h3>
+            <p>VANET's is an emerging field in communication networks and has become a promising tool to provide safety and connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation paVANET's is an emerging field in communication networks and has become a promising tool to provide safety and connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation parameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.rameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.
+	    </p>
+        </div>
+
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
