--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/rajvardhandeshmukh@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -314,7 +314,7 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/RAJSD2610" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/deshmukhrajvardhan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
