--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
                             <a href="https://github.com/deshmukhrajvardhan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/rajvardhandeshmukh/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+
                         </li>
                         <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
