--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
                 <h3>Mayuresh Industries Limited, Kolhapur, India</h3>
                 <h4>Engineering Intern</h4>
                 <p>
-                    
                 <li> Underwent onsite training in: Microcontrollers and their applications </li>
 		<li> Analog circuits for various applications such as juicer </li>
 		<li> Gained theoretical knowledge of the processing skills required in the microcontrollers and analog circuits </li>
@@ -127,7 +126,10 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
             <h3>University of Massachusetts, Amherst</h3>
             <span class="education-date">Fall 2016 - Present</span>
             <h4>Master of Science in Electrical and Computer Engineering</h4>
-            <p></p>
+            <p>
+		• <a href="http://www.ecs.umass.edu/ece671/index.html">Computer Networks</a> • Trustworthy Computing • <a href="http://www-unix.ecs.umass.edu/~dgoeckel/ece603.html">Probability and Random Processes<\a> • <a href="http://www.ecs.umass.edu/ece570/">System Software Design<\a> 
+		• <a href="http://rio.ecs.umass.edu/~lgao/ece665_17/">Algorithms<\a> • <a href="https://people.cs.umass.edu/~silee/">Wearable & MobileSens/ClincSci<\a> • Data Analytics 
+	    </p>
         </div>
         <!-- End .education-block -->
 
