--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
             <span class="education-date">Fall 2016 - Present</span>
             <h4>Master of Science in Electrical and Computer Engineering</h4>
             <p>
-		• <a href="http://www.ecs.umass.edu/ece671/index.html">Computer Networks</a> • Trustworthy Computing • <a href="http://www-unix.ecs.umass.edu/~dgoeckel/ece603.html">Probability and Random Processes<\a> • <a href="http://www.ecs.umass.edu/ece570/">System Software Design<\a> 
-		• <a href="http://rio.ecs.umass.edu/~lgao/ece665_17/">Algorithms<\a> • <a href="https://people.cs.umass.edu/~silee/">Wearable & MobileSens/ClincSci<\a> • Data Analytics 
+		• <a href="http://www.ecs.umass.edu/ece671/index.html">Computer Networks</a> • Trustworthy Computing • <a href="http://www-unix.ecs.umass.edu/~dgoeckel/ece603.html">Probability and Random Processes</a> 
+		• <a href="http://www.ecs.umass.edu/ece570/">System Software Design</a> • <a href="http://rio.ecs.umass.edu/~lgao/ece665_17/">Algorithms</a> 
+		• <a href="https://people.cs.umass.edu/~silee/">Wearable & MobileSens/ClincSci</a> • Data Analytics 
 	    </p>
         </div>
         <!-- End .education-block -->
