--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
             <span class="education-date">Fall 2016 - Present</span>
             <h4>Master of Science in Electrical and Computer Engineering</h4>
             <p>
-		• <a href="http://www.ecs.umass.edu/ece671/index.html">Computer Networks</a> • Trustworthy Computing • <a href="http://www-unix.ecs.umass.edu/~dgoeckel/ece603.html">Probability and Random Processes</a> 
-		• <a href="http://www.ecs.umass.edu/ece570/">System Software Design</a> • <a href="http://rio.ecs.umass.edu/~lgao/ece665_17/">Algorithms</a> 
-		• <a href="https://people.cs.umass.edu/~silee/">Wearable & MobileSens/ClincSci</a> • Data Analytics 
+		• <a href="http://www.ecs.umass.edu/ece671/index.html">Computer Networks</a> • <a href="https://ece.umass.edu/sites/default/files/ece/Syllabus_644_Fall2015.pdf">Trustworthy Computing</a> 
+		• <a href="http://www-unix.ecs.umass.edu/~dgoeckel/ece603.html">Probability and Random Processes</a> • <a href="http://www.ecs.umass.edu/ece570/">Advanced System Software Design</a>
+		• <a href="http://rio.ecs.umass.edu/~lgao/ece665_17/">Algorithms</a> • <a href="https://people.cs.umass.edu/~silee/">Wearable & MobileSens/ClincSci</a> 
+		• <a href="http://www-unix.ecs.umass.edu/%7Ekrishna/">Data Analytics</a> 
 	    </p>
         </div>
         <!-- End .education-block -->
