--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1>Rajvardhan Deshmukh</h1>
             <h2>Graduate Research Assistant</h2>
 	    <h3>University of Massachusetts Amherst</h2>
-            <a href="../blob/master/resume.pdf" download="RajvardhanResume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/deshmukhrajvardhan/deshmukhrajvardhan.github.io/blob/master/resume.pdf" download="RajvardhanResume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
