--- a/index.html
+++ b/index.html
@@ -87,11 +87,23 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
         <div id="experience-timeline">
             <div data-date="February 2017 – Present">
                 <h3>University of Massachusetts, ECE Department, Amherst </h3>
-                <h4>Graduate Research Assistant</h4>
+                <h4><a href="#projects">Graduate Research Assistant</a></h4>
                 <p>
-		   <li> Compared Adaptive bitrate strategies (SQUAD and BOLA) over application layer protocols (QUIC, HTTP1 and HTTP2) on Cloudlab nodes using Astream player and Caddy server. (published) </li>
-                   <li> Compared IP based approach to Information Centric Approach (ICN) to disseminate information in NS3 simulation. (published) </li>
-		   <li> Offloading the LTE base-stations using ICN and comparing various parameters in NS3 simulation. (published) </li> 
+			 Improving QoE of ABR Streaming Sessions through QUIC Retransmissions (Python)
+<br>• Implemented an algorithm to analyze 3-day video streaming data from Akamai CDN to identify video-quality
+gaps that could be filled to improve QoE.</br>
+<br>• Amended and verified adaptive bit-rate streaming strategy SQUAD over QUIC, HTTP/1.1 and HTTP/2, on
+Cloudlab (testbed) nodes using Astream player (client application implemented in python) and Caddy server.</br>
+<br>• Implemented multiple stream requests over HTTP/2 and QUIC in the Astreamer using concurrent programming.</br>
+</p>
+<p> Scalable and low latency system for disseminating alerts in VANETS (C++, Python)</br>
+<br>• Compared existing LTE-IP based approach to VANET-Information Centric Approach (ICN) (ndnSIM/ns-3).</br>
+<br>• Formulated and exhibited efficient geo-location based forwarding strategy, that sends alerts 100 times faster than
+LTE based approach, for 63% of total messages delivered.</br>
+</p>
+<p> Offloading Traffic from LTE to MANET to improve latency and reduce load (C++, Python)
+<br>• Offloaded LTE base-stations by strategically switching to wireless ad-hoc mode using ICN (ndnSIM/ns-3).</br>
+<br>• Experimented with caching strategies, packet statistics and device energy level to create forwarding strategy.</br>
 		</p>
             </div>
 
@@ -147,6 +159,36 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
     <!-- End #education -->
 <div id="education">
         <h2 class="heading">Publications</h2>
+	 <div class="education-block">
+            <h3><a href="https://dl.acm.org/citation.cfm?id=3240664"> Improving QoE of ABR Streaming Sessions through QUIC Retransmissions </a></h3>
+            <p>While adaptive bitrate (ABR) streaming has contributed significantly to the reduction of video playout stalling,
+		    ABR clients continue to suffer from the variation of bit rate qualities over the duration of a streaming 
+		    session. Similar to stalling, these variations in bit rate quality have a negative impact on the users' 
+		    Quality of Experience (QoE). In this paper, we use a trace from a large-scale CDN to show that such quality
+		    changes occur in a significant amount of streaming sessions and investigate an ABR video segment 
+		    retransmission approach to reduce the number of such quality changes. As the new HTTP/2 standard is becoming 
+		    increasingly popular, we also see an increase in the usage of QUIC as an alternative protocol for the 
+		    transmission of web traffic including video streaming. Using various network conditions, we conduct a 
+		    systematic comparison of existing transport layer approaches for HTTP/2 that is best suited for ABR segment 
+		    retransmissions. Since it is well known that both protocols provide a series of improvements over HTTP/1.1, 
+		    we perform experiments both in controlled environments and over transcontinental links in the Internet and 
+		    find that these benefits also "trickle up'' into the application layer when it comes to ABR video streaming 
+		    where QUIC retransmissions can significantly improve the average quality bitrate while simultaneously 
+		    minimizing bit rate variations over the duration of a streaming session.
+	    </p>
+        </div>
+<!-- End .education-block -->
+	<h2 class="heading">Publications</h2>
+	 <div class="education-block">
+            <h3><a href="https://thiteixeira.github.io/icn-adhoc.html#publications"> Increasing Network Resiliency via Data-Centric Offloading </a></h3>
+            <p>The soaring number of mobile devices, coupled with the increase in traffic, is posing a significant challenge to cellular networks. 
+		    Network operators have to deploy more base stations to cope with the load and user's expectations; however, this approach 
+		    increases complexity and it's hard to manage. We propose M2M communication that applies Information-Centric Networking (ICN) 
+		    to fetch content from nearby peers prior to sending the request to the RAN. In this ongoing research, 
+		    we expect to successfully fetch partial contents from the MANET, ultimately offloading base stations.
+	    </p>
+        </div>
+<!-- End .education-block -->
         <div class="education-block">
             <h3><a href="http://ieeexplore.ieee.org/document/8115849/"> An information centric networking approach for sensor to vehicular network communication in disasters </a></h3>
             <p>In this paper, we present an NDN-based architecture for the dissemination of roadside information to cars. 
@@ -161,7 +203,10 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
         <!-- End .education-block -->
         <div class="education-block">
             <h3><a href="http://ieeexplore.ieee.org/document/7546061/"> Analysis of DSDV, OLSR and AODV Routing Protocols in VANETS Scenario: Using NS3 </a></h3>
-            <p>VANET's is an emerging field in communication networks and has become a promising tool to provide safety and connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation paVANET's is an emerging field in communication networks and has become a promising tool to provide safety and connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation parameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.rameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.
+            <p>VANET's is an emerging field in communication networks and has become a promising tool to provide safety and 
+		    connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for 
+		    smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I 
+		    and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation paVANET's is an emerging field in communication networks and has become a promising tool to provide safety and connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation parameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.rameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.
 	    </p>
         </div>
 
