--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
         <div id="experience-timeline">
             <div data-date="February 2017 – Present">
                 <h3>University of Massachusetts, ECE Department, Amherst </h3>
-                <h4><a href="#projects">Graduate Research Assistant</a></h4>
+                <h4><a href="#publications">Graduate Research Assistant</a></h4>
                 <p>
-			 Improving QoE of ABR Streaming Sessions through QUIC Retransmissions (Python)
+			1. Improving QoE of ABR Streaming Sessions through QUIC Retransmissions (Python)
 <br>• Implemented an algorithm to analyze 3-day video streaming data from Akamai CDN to identify video-quality
 gaps that could be filled to improve QoE.</br>
 <br>• Amended and verified adaptive bit-rate streaming strategy SQUAD over QUIC, HTTP/1.1 and HTTP/2, on
 Cloudlab (testbed) nodes using Astream player (client application implemented in python) and Caddy server.</br>
 <br>• Implemented multiple stream requests over HTTP/2 and QUIC in the Astreamer using concurrent programming.</br>
 </p>
-<p> Scalable and low latency system for disseminating alerts in VANETS (C++, Python)</br>
+<p>2. Scalable and low latency system for disseminating alerts in VANETS (C++, Python)</br>
 <br>• Compared existing LTE-IP based approach to VANET-Information Centric Approach (ICN) (ndnSIM/ns-3).</br>
 <br>• Formulated and exhibited efficient geo-location based forwarding strategy, that sends alerts 100 times faster than
 LTE based approach, for 63% of total messages delivered.</br>
 </p>
-<p> Offloading Traffic from LTE to MANET to improve latency and reduce load (C++, Python)
+<p>3. Offloading Traffic from LTE to MANET to improve latency and reduce load (C++, Python)
 <br>• Offloaded LTE base-stations by strategically switching to wireless ad-hoc mode using ICN (ndnSIM/ns-3).</br>
 <br>• Experimented with caching strategies, packet statistics and device energy level to create forwarding strategy.</br>
 		</p>
@@ -157,9 +157,9 @@ LTE based approach, for 63% of total messages delivered.</br>
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
-<div id="education">
+<div id="publications">
         <h2 class="heading">Publications</h2>
-	 <div class="education-block">
+	 <div class="publications-block">
             <h3><a href="https://dl.acm.org/citation.cfm?id=3240664"> Improving QoE of ABR Streaming Sessions through QUIC Retransmissions </a></h3>
             <p>While adaptive bitrate (ABR) streaming has contributed significantly to the reduction of video playout stalling,
 		    ABR clients continue to suffer from the variation of bit rate qualities over the duration of a streaming 
