--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@ LTE based approach, for 63% of total messages delivered.</br>
 	    </p>
         </div>
 <!-- End .education-block -->
-	<h2 class="heading">Publications</h2>
-	 <div class="education-block">
+	 <div class="publications-block">
             <h3><a href="https://thiteixeira.github.io/icn-adhoc.html#publications"> Increasing Network Resiliency via Data-Centric Offloading </a></h3>
             <p>The soaring number of mobile devices, coupled with the increase in traffic, is posing a significant challenge to cellular networks. 
 		    Network operators have to deploy more base stations to cope with the load and user's expectations; however, this approach 
@@ -189,7 +188,7 @@ LTE based approach, for 63% of total messages delivered.</br>
 	    </p>
         </div>
 <!-- End .education-block -->
-        <div class="education-block">
+        <div class="publications-block">
             <h3><a href="http://ieeexplore.ieee.org/document/8115849/"> An information centric networking approach for sensor to vehicular network communication in disasters </a></h3>
             <p>In this paper, we present an NDN-based architecture for the dissemination of roadside information to cars. 
 	       Our focus is on flooding events which are often caused by severe weather which also impacts the communication 
@@ -201,7 +200,7 @@ LTE based approach, for 63% of total messages delivered.</br>
 	    </p>
         </div>
         <!-- End .education-block -->
-        <div class="education-block">
+        <div class="publications-block">
             <h3><a href="http://ieeexplore.ieee.org/document/7546061/"> Analysis of DSDV, OLSR and AODV Routing Protocols in VANETS Scenario: Using NS3 </a></h3>
             <p>VANET's is an emerging field in communication networks and has become a promising tool to provide safety and 
 		    connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for 
