--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li>
                 <a href="#experience">Experience</a>
             </li>
+	    <li>
+                <a href="#publications">Publications</a>
+            </li>
             <li>
                 <a href="#education">Education</a>
             </li>
@@ -159,7 +162,7 @@ LTE based approach, for 63% of total messages delivered.</br>
     <!-- End #education -->
 <div id="publications">
         <h2 class="heading">Publications</h2>
-	 <div class="publications-block">
+	 <div class="education-block">
             <h3><a href="https://dl.acm.org/citation.cfm?id=3240664"> Improving QoE of ABR Streaming Sessions through QUIC Retransmissions </a></h3>
             <p>While adaptive bitrate (ABR) streaming has contributed significantly to the reduction of video playout stalling,
 		    ABR clients continue to suffer from the variation of bit rate qualities over the duration of a streaming 
@@ -178,7 +181,7 @@ LTE based approach, for 63% of total messages delivered.</br>
 	    </p>
         </div>
 <!-- End .education-block -->
-	 <div class="publications-block">
+	 <div class="education-block">
             <h3><a href="https://thiteixeira.github.io/icn-adhoc.html#publications"> Increasing Network Resiliency via Data-Centric Offloading </a></h3>
             <p>The soaring number of mobile devices, coupled with the increase in traffic, is posing a significant challenge to cellular networks. 
 		    Network operators have to deploy more base stations to cope with the load and user's expectations; however, this approach 
@@ -188,7 +191,7 @@ LTE based approach, for 63% of total messages delivered.</br>
 	    </p>
         </div>
 <!-- End .education-block -->
-        <div class="publications-block">
+        <div class="education-block">
             <h3><a href="http://ieeexplore.ieee.org/document/8115849/"> An information centric networking approach for sensor to vehicular network communication in disasters </a></h3>
             <p>In this paper, we present an NDN-based architecture for the dissemination of roadside information to cars. 
 	       Our focus is on flooding events which are often caused by severe weather which also impacts the communication 
@@ -200,7 +203,7 @@ LTE based approach, for 63% of total messages delivered.</br>
 	    </p>
         </div>
         <!-- End .education-block -->
-        <div class="publications-block">
+        <div class="education-block">
             <h3><a href="http://ieeexplore.ieee.org/document/7546061/"> Analysis of DSDV, OLSR and AODV Routing Protocols in VANETS Scenario: Using NS3 </a></h3>
             <p>VANET's is an emerging field in communication networks and has become a promising tool to provide safety and 
 		    connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for 
