--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@ gaps that could be filled to improve QoE.</br>
 Cloudlab (testbed) nodes using Astream player (client application implemented in python) and Caddy server.</br>
 <br>• Implemented multiple stream requests over HTTP/2 and QUIC in the Astreamer using concurrent programming.</br>
 </p>
-<p>2. Scalable and low latency system for disseminating alerts in VANETS (C++, Python)</br>
+<p><br>2. Scalable and low latency system for disseminating alerts in VANETS (C++, Python)</br>
 <br>• Compared existing LTE-IP based approach to VANET-Information Centric Approach (ICN) (ndnSIM/ns-3).</br>
 <br>• Formulated and exhibited efficient geo-location based forwarding strategy, that sends alerts 100 times faster than
 LTE based approach, for 63% of total messages delivered.</br>
 </p>
-<p>3. Offloading Traffic from LTE to MANET to improve latency and reduce load (C++, Python)
+<p><br>3. Offloading Traffic from LTE to MANET to improve latency and reduce load (C++, Python)<br>
 <br>• Offloaded LTE base-stations by strategically switching to wireless ad-hoc mode using ICN (ndnSIM/ns-3).</br>
 <br>• Experimented with caching strategies, packet statistics and device energy level to create forwarding strategy.</br>
 		</p>
@@ -160,11 +160,13 @@ LTE based approach, for 63% of total messages delivered.</br>
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
-<div id="publications">
+
+    <div id="publications" class="background-alt">
         <h2 class="heading">Publications</h2>
 	 <div class="education-block">
             <h3><a href="https://dl.acm.org/citation.cfm?id=3240664"> Improving QoE of ABR Streaming Sessions through QUIC Retransmissions </a></h3>
-            <p>While adaptive bitrate (ABR) streaming has contributed significantly to the reduction of video playout stalling,
+            <p>     
+		    While adaptive bitrate (ABR) streaming has contributed significantly to the reduction of video playout stalling,
 		    ABR clients continue to suffer from the variation of bit rate qualities over the duration of a streaming 
 		    session. Similar to stalling, these variations in bit rate quality have a negative impact on the users' 
 		    Quality of Experience (QoE). In this paper, we use a trace from a large-scale CDN to show that such quality
@@ -183,7 +185,8 @@ LTE based approach, for 63% of total messages delivered.</br>
 <!-- End .education-block -->
 	 <div class="education-block">
             <h3><a href="https://thiteixeira.github.io/icn-adhoc.html#publications"> Increasing Network Resiliency via Data-Centric Offloading </a></h3>
-            <p>The soaring number of mobile devices, coupled with the increase in traffic, is posing a significant challenge to cellular networks. 
+            <p>     
+		    The soaring number of mobile devices, coupled with the increase in traffic, is posing a significant challenge to cellular networks. 
 		    Network operators have to deploy more base stations to cope with the load and user's expectations; however, this approach 
 		    increases complexity and it's hard to manage. We propose M2M communication that applies Information-Centric Networking (ICN) 
 		    to fetch content from nearby peers prior to sending the request to the RAN. In this ongoing research, 
@@ -193,7 +196,8 @@ LTE based approach, for 63% of total messages delivered.</br>
 <!-- End .education-block -->
         <div class="education-block">
             <h3><a href="http://ieeexplore.ieee.org/document/8115849/"> An information centric networking approach for sensor to vehicular network communication in disasters </a></h3>
-            <p>In this paper, we present an NDN-based architecture for the dissemination of roadside information to cars. 
+            <p>
+	       In this paper, we present an NDN-based architecture for the dissemination of roadside information to cars. 
 	       Our focus is on flooding events which are often caused by severe weather which also impacts the communication 
 	       infrastructure. We compare the performance of different message forwarding strategies in VANETs (Vehicular Adhoc 
 	       Networks) through simulation. In addition, we analyze how our approach compares to an infrastructure-based 
@@ -205,7 +209,8 @@ LTE based approach, for 63% of total messages delivered.</br>
         <!-- End .education-block -->
         <div class="education-block">
             <h3><a href="http://ieeexplore.ieee.org/document/7546061/"> Analysis of DSDV, OLSR and AODV Routing Protocols in VANETS Scenario: Using NS3 </a></h3>
-            <p>VANET's is an emerging field in communication networks and has become a promising tool to provide safety and 
+            <p>     
+		    VANET's is an emerging field in communication networks and has become a promising tool to provide safety and 
 		    connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for 
 		    smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I 
 		    and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation paVANET's is an emerging field in communication networks and has become a promising tool to provide safety and connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation parameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.rameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.
@@ -216,7 +221,7 @@ LTE based approach, for 63% of total messages delivered.</br>
     </div>
     <!-- End #education -->
 
-    <div id="projects" class="background-alt">
+    <div id="projects">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
@@ -331,7 +336,7 @@ browse available books and manage their accounts.
     </div>
     <!-- End #projects -->
 
-    <div id="skills">
+    <div id="skills" class="background-alt">
         <h2 class="heading">Skills</h2>
         <ul>
 	    <li>SDN</li>
