--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#experience">Experience</a>
             </li>
 	    <li>
-                <a href="#publications">Publications</a>
+                <a href="#publication">Publication</a>
             </li>
             <li>
                 <a href="#education">Education</a>
@@ -161,36 +161,37 @@ LTE based approach, for 63% of total messages delivered.</br>
     </div>
     <!-- End #education -->
 
-    <div id="publications" class="background-alt">
-        <h2 class="heading">Publications</h2>
+    <div id="publication">
+        <h2 class="heading">Publication</h2>
 	 <div class="education-block">
             <h3><a href="https://dl.acm.org/citation.cfm?id=3240664"> Improving QoE of ABR Streaming Sessions through QUIC Retransmissions </a></h3>
             <p>     
-		    While adaptive bitrate (ABR) streaming has contributed significantly to the reduction of video playout stalling,
-		    ABR clients continue to suffer from the variation of bit rate qualities over the duration of a streaming 
-		    session. Similar to stalling, these variations in bit rate quality have a negative impact on the users' 
-		    Quality of Experience (QoE). In this paper, we use a trace from a large-scale CDN to show that such quality
-		    changes occur in a significant amount of streaming sessions and investigate an ABR video segment 
-		    retransmission approach to reduce the number of such quality changes. As the new HTTP/2 standard is becoming 
-		    increasingly popular, we also see an increase in the usage of QUIC as an alternative protocol for the 
-		    transmission of web traffic including video streaming. Using various network conditions, we conduct a 
-		    systematic comparison of existing transport layer approaches for HTTP/2 that is best suited for ABR segment 
-		    retransmissions. Since it is well known that both protocols provide a series of improvements over HTTP/1.1, 
-		    we perform experiments both in controlled environments and over transcontinental links in the Internet and 
-		    find that these benefits also "trickle up'' into the application layer when it comes to ABR video streaming 
-		    where QUIC retransmissions can significantly improve the average quality bitrate while simultaneously 
-		    minimizing bit rate variations over the duration of a streaming session.
+		While adaptive bitrate (ABR) streaming has contributed significantly to the reduction of video playout stalling,
+		ABR clients continue to suffer from the variation of bit rate qualities over the duration of a streaming 
+		session. Similar to stalling, these variations in bit rate quality have a negative impact on the users' 
+		Quality of Experience (QoE). In this paper, we use a trace from a large-scale CDN to show that such quality
+		changes occur in a significant amount of streaming sessions and investigate an ABR video segment 
+		retransmission approach to reduce the number of such quality changes. As the new HTTP/2 standard is becoming 
+		increasingly popular, we also see an increase in the usage of QUIC as an alternative protocol for the 
+		transmission of web traffic including video streaming. Using various network conditions, we conduct a 
+		systematic comparison of existing transport layer approaches for HTTP/2 that is best suited for ABR segment 
+		retransmissions. Since it is well known that both protocols provide a series of improvements over HTTP/1.1, 
+		we perform experiments both in controlled environments and over transcontinental links in the Internet and 
+		find that these benefits also "trickle up'' into the application layer when it comes to ABR video streaming 
+		where QUIC retransmissions can significantly improve the average quality bitrate while simultaneously 
+		minimizing bit rate variations over the duration of a streaming session.
 	    </p>
         </div>
 <!-- End .education-block -->
 	 <div class="education-block">
             <h3><a href="https://thiteixeira.github.io/icn-adhoc.html#publications"> Increasing Network Resiliency via Data-Centric Offloading </a></h3>
             <p>     
-		    The soaring number of mobile devices, coupled with the increase in traffic, is posing a significant challenge to cellular networks. 
-		    Network operators have to deploy more base stations to cope with the load and user's expectations; however, this approach 
-		    increases complexity and it's hard to manage. We propose M2M communication that applies Information-Centric Networking (ICN) 
-		    to fetch content from nearby peers prior to sending the request to the RAN. In this ongoing research, 
-		    we expect to successfully fetch partial contents from the MANET, ultimately offloading base stations.
+	       The soaring number of mobile devices, coupled with the increase in traffic, is posing a significant 
+	       challenge to cellular networks. Network operators have to deploy more base stations to cope with the 
+	       load and user's expectations; however, this approach increases complexity and it's hard to manage. 
+	       We propose M2M communication that applies Information-Centric Networking (ICN) 
+	       to fetch content from nearby peers prior to sending the request to the RAN. In this ongoing research, 
+	       we expect to successfully fetch partial contents from the MANET, ultimately offloading base stations.
 	    </p>
         </div>
 <!-- End .education-block -->
@@ -221,7 +222,7 @@ LTE based approach, for 63% of total messages delivered.</br>
     </div>
     <!-- End #education -->
 
-    <div id="projects">
+    <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
