--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
 			1. Improving QoE of ABR Streaming Sessions through QUIC Retransmissions (Python)
 <br>• Implemented an algorithm to analyze 3-day video streaming data from Akamai CDN to identify video-quality
 gaps that could be filled to improve QoE.</br>
-<br>• Amended and verified adaptive bit-rate streaming strategy SQUAD over QUIC, HTTP/1.1 and HTTP/2, on
-Cloudlab (testbed) nodes using Astream player (client application implemented in python) and Caddy server.</br>
-<br>• Implemented multiple stream requests over HTTP/2 and QUIC in the Astreamer using concurrent programming.</br>
+• Amended and verified adaptive bit-rate streaming strategy SQUAD over QUIC, HTTP/1.1 and HTTP/2, on
+Cloudlab (testbed) nodes using Astream player (client application implemented in python) and Caddy server.
+• Implemented multiple stream requests over HTTP/2 and QUIC in the Astreamer using concurrent programming.
 </p>
-<p><br>2. Scalable and low latency system for disseminating alerts in VANETS (C++, Python)</br>
+<p>2. Scalable and low latency system for disseminating alerts in VANETS (C++, Python)
 <br>• Compared existing LTE-IP based approach to VANET-Information Centric Approach (ICN) (ndnSIM/ns-3).</br>
-<br>• Formulated and exhibited efficient geo-location based forwarding strategy, that sends alerts 100 times faster than
-LTE based approach, for 63% of total messages delivered.</br>
+• Formulated and exhibited efficient geo-location based forwarding strategy, that sends alerts 100 times faster than
+LTE based approach, for 63% of total messages delivered.
 </p>
-<p><br>3. Offloading Traffic from LTE to MANET to improve latency and reduce load (C++, Python)<br>
+<p>3. Offloading Traffic from LTE to MANET to improve latency and reduce load (C++, Python)
 <br>• Offloaded LTE base-stations by strategically switching to wireless ad-hoc mode using ICN (ndnSIM/ns-3).</br>
-<br>• Experimented with caching strategies, packet statistics and device energy level to create forwarding strategy.</br>
+• Experimented with caching strategies, packet statistics and device energy level to create forwarding strategy.
 		</p>
             </div>
 
@@ -165,7 +165,7 @@ LTE based approach, for 63% of total messages delivered.</br>
         <h2 class="heading">Publication</h2>
 	 <div class="education-block">
             <h3><a href="https://dl.acm.org/citation.cfm?id=3240664"> Improving QoE of ABR Streaming Sessions through QUIC Retransmissions </a></h3>
-            <p>     
+            <p> <br>
 		While adaptive bitrate (ABR) streaming has contributed significantly to the reduction of video playout stalling,
 		ABR clients continue to suffer from the variation of bit rate qualities over the duration of a streaming 
 		session. Similar to stalling, these variations in bit rate quality have a negative impact on the users' 
@@ -179,42 +179,51 @@ LTE based approach, for 63% of total messages delivered.</br>
 		we perform experiments both in controlled environments and over transcontinental links in the Internet and 
 		find that these benefits also "trickle up'' into the application layer when it comes to ABR video streaming 
 		where QUIC retransmissions can significantly improve the average quality bitrate while simultaneously 
-		minimizing bit rate variations over the duration of a streaming session.
+		minimizing bit rate variations over the duration of a streaming session.</br>
 	    </p>
         </div>
 <!-- End .education-block -->
 	 <div class="education-block">
             <h3><a href="https://thiteixeira.github.io/icn-adhoc.html#publications"> Increasing Network Resiliency via Data-Centric Offloading </a></h3>
-            <p>     
+            <p> <br>
 	       The soaring number of mobile devices, coupled with the increase in traffic, is posing a significant 
 	       challenge to cellular networks. Network operators have to deploy more base stations to cope with the 
 	       load and user's expectations; however, this approach increases complexity and it's hard to manage. 
 	       We propose M2M communication that applies Information-Centric Networking (ICN) 
 	       to fetch content from nearby peers prior to sending the request to the RAN. In this ongoing research, 
-	       we expect to successfully fetch partial contents from the MANET, ultimately offloading base stations.
+	       we expect to successfully fetch partial contents from the MANET, ultimately offloading base stations.</br>
 	    </p>
         </div>
 <!-- End .education-block -->
         <div class="education-block">
             <h3><a href="http://ieeexplore.ieee.org/document/8115849/"> An information centric networking approach for sensor to vehicular network communication in disasters </a></h3>
-            <p>
+            <p> <br>
 	       In this paper, we present an NDN-based architecture for the dissemination of roadside information to cars. 
 	       Our focus is on flooding events which are often caused by severe weather which also impacts the communication 
 	       infrastructure. We compare the performance of different message forwarding strategies in VANETs (Vehicular Adhoc 
 	       Networks) through simulation. In addition, we analyze how our approach compares to an infrastructure-based 
 	       approach that is less resilient in the case of natural disaster. Our simulations show that the strategy that 
 	       considers geographical location and velocity of the vehicle performs better compared to others, which in turn 
-	       outperforms the infrastructure-based approach
+	       outperforms the infrastructure-based approach. </br>
 	    </p>
         </div>
         <!-- End .education-block -->
         <div class="education-block">
             <h3><a href="http://ieeexplore.ieee.org/document/7546061/"> Analysis of DSDV, OLSR and AODV Routing Protocols in VANETS Scenario: Using NS3 </a></h3>
-            <p>     
+            <p>     <br>
 		    VANET's is an emerging field in communication networks and has become a promising tool to provide safety and 
 		    connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for 
 		    smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I 
-		    and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation paVANET's is an emerging field in communication networks and has become a promising tool to provide safety and connectivity for an intelligent transport system. Choosing appropriate routing protocols is necessary for smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet overhead, as evaluation parameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.rameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.
+		    and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) 
+		    and packet overhead, as evaluation paVANET's is an emerging field in communication networks and has become a promising 
+		    tool to provide safety and connectivity for an intelligent transport system. Choosing appropriate routing protocols is 
+		    necessary for smooth communication. In this paper we use NS-3 to implement AODV, OLSR and DSDV routing on V-to-V, I-to-I 
+		    and V-to-I nodes. Then we employ Qos (Quality of service) parameters like throughput, PLR (packet loss ratio) and packet 
+		    overhead, as evaluation parameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast fading 
+		    propagation loss model for the simulations. The simulation results show that OLSR is the most optimum technique amongst 
+		    AODV, DSDV and OLSR for our model.rameters to compare these routing protocols. We use IEEE 802.11p and Nakagami-n fast 
+		    fading propagation loss model for the simulations. 
+		    The simulation results show that OLSR is the most optimum technique amongst AODV, DSDV and OLSR for our model.</br>
 	    </p>
         </div>
 
