--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
         <div id="experience-timeline">
             <div data-date="February 2017 – Present">
                 <h3>University of Massachusetts, ECE Department, Amherst </h3>
-                <h4><a href="#publications">Graduate Research Assistant</a></h4>
+                <h4><a href="#publication">Graduate Research Assistant</a></h4>
                 <p>
 			1. Improving QoE of ABR Streaming Sessions through QUIC Retransmissions (Python)
 <br>• Implemented an algorithm to analyze 3-day video streaming data from Akamai CDN to identify video-quality
