--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <a href="#experience">Experience</a>
             </li>
 	    <li>
-                <a href="#publication">Publication</a>
+                <a href="#education">Education</a>
             </li>
             <li>
-                <a href="#education">Education</a>
+                <a href="#education">Publications</a>
             </li>
             <li>
                 <a href="#projects">Projects</a>
@@ -90,7 +90,7 @@ experience as well as contribute, especially in the fields of Adaptive bitrate s
         <div id="experience-timeline">
             <div data-date="February 2017 – Present">
                 <h3>University of Massachusetts, ECE Department, Amherst </h3>
-                <h4><a href="#publication">Graduate Research Assistant</a></h4>
+                <h4><a href="#education">Graduate Research Assistant</a></h4>
                 <p>
 			1. Improving QoE of ABR Streaming Sessions through QUIC Retransmissions (Python)
 <br>• Implemented an algorithm to analyze 3-day video streaming data from Akamai CDN to identify video-quality
@@ -161,8 +161,8 @@ LTE based approach, for 63% of total messages delivered.
     </div>
     <!-- End #education -->
 
-    <div id="publication">
-        <h2 class="heading">Publication</h2>
+    <div id="education">
+        <h2 class="heading">Publications</h2>
 	 <div class="education-block">
             <h3><a href="https://dl.acm.org/citation.cfm?id=3240664"> Improving QoE of ABR Streaming Sessions through QUIC Retransmissions </a></h3>
             <p> <br>
