--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         <ul id="menu" class="shadow">
+	    <div class="col-sm-5 social">
 	    <li>
 		<a href="https://github.com/deshmukhrajvardhan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
 	    </li>
+	    </div>
             <li>
                 <a href="#about">About</a>
             </li>
