--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         <ul id="menu" class="shadow">
-	    <div class="col-sm-5 social">
+	    
 	    <li>
-		<a href="https://github.com/deshmukhrajvardhan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+		<a href="https://github.com/deshmukhrajvardhan" target="_blank">Code</a>
 	    </li>
-	    </div>
+	    
             <li>
                 <a href="#about">About</a>
             </li>
@@ -59,7 +59,7 @@
             <h1>Rajvardhan Deshmukh</h1>
             <h2>Graduate Research Assistant</h2>
 	    <h3>University of Massachusetts Amherst</h2>
-            <a href="https://github.com/deshmukhrajvardhan/deshmukhrajvardhan.github.io/blob/master/resume_sw.pdf" download="RajvardhanResume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/deshmukhrajvardhan/deshmukhrajvardhan.github.io/blob/master/resume_sw.pdf" target="_blank" download="RajvardhanResume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
