--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <a href="#projects">Projects</a>
             </li>
             <li>
+                <a href="#skills">Teaching</a>
+            </li>
+            <li>
                 <a href="#skills">Skills</a>
             </li>
             <li>
@@ -167,7 +170,8 @@ LTE based approach, for 63% of total messages delivered.
         <h2 class="heading">Publications</h2>
 	 <div class="education-block">
             <h3><a href="https://dl.acm.org/citation.cfm?id=3240664"> Improving QoE of ABR Streaming Sessions through QUIC Retransmissions </a></h3>
-            <p> <br>
+            <p> 
+		<br>
 		While adaptive bitrate (ABR) streaming has contributed significantly to the reduction of video playout stalling,
 		ABR clients continue to suffer from the variation of bit rate qualities over the duration of a streaming 
 		session. Similar to stalling, these variations in bit rate quality have a negative impact on the users' 
@@ -181,19 +185,22 @@ LTE based approach, for 63% of total messages delivered.
 		we perform experiments both in controlled environments and over transcontinental links in the Internet and 
 		find that these benefits also "trickle up'' into the application layer when it comes to ABR video streaming 
 		where QUIC retransmissions can significantly improve the average quality bitrate while simultaneously 
-		minimizing bit rate variations over the duration of a streaming session.</br>
+		minimizing bit rate variations over the duration of a streaming session.
+		 </br>
 	    </p>
         </div>
 <!-- End .education-block -->
 	 <div class="education-block">
             <h3><a href="https://thiteixeira.github.io/icn-adhoc.html#publications"> Increasing Network Resiliency via Data-Centric Offloading </a></h3>
-            <p> <br>
+            <p> 
+	       <br>
 	       The soaring number of mobile devices, coupled with the increase in traffic, is posing a significant 
 	       challenge to cellular networks. Network operators have to deploy more base stations to cope with the 
 	       load and user's expectations; however, this approach increases complexity and it's hard to manage. 
 	       We propose M2M communication that applies Information-Centric Networking (ICN) 
 	       to fetch content from nearby peers prior to sending the request to the RAN. In this ongoing research, 
-	       we expect to successfully fetch partial contents from the MANET, ultimately offloading base stations.</br>
+	       we expect to successfully fetch partial contents from the MANET, ultimately offloading base stations.
+               </br>
 	    </p>
         </div>
 <!-- End .education-block -->
@@ -347,6 +354,13 @@ browse available books and manage their accounts.
         </div>
     </div>
     <!-- End #projects -->
+<div id="skills">
+        <h2 class="heading">Teaching</h2>
+        <ul>
+	    <li><a href="http://www.ecs.umass.edu/ece241/people.html">Data Structures and Algorithms</a></li>
+        </ul>
+    </div>
+    <!-- End #skills -->
 
     <div id="skills" class="background-alt">
         <h2 class="heading">Skills</h2>
