--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ browse available books and manage their accounts.
     </div>
     <!-- End #projects -->
 <div id="skills">
-        <h2 class="heading">Teaching</h2>
+        <h2 class="heading">Teaching Assistant</h2>
         <ul>
 	    <li><a href="http://www.ecs.umass.edu/ece241/people.html">Data Structures and Algorithms</a></li>
         </ul>
